--- a/soft-project/views/signup.html
+++ b/soft-project/views/signup.html
@@ -11,6 +11,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="css/popupform.css" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body class="contact is-preload">
 		<div id="page-wrapper">
@@ -66,6 +68,8 @@
 								<!--Form for Sign Up-->
 								<div style="width:50%;" class="content">
 									<h3>Sign Up</h3>
+									<div class="center hideform">
+									<button id='close'>Close</button>
 									<form action="http://localhost:3001/signup" id="customerPOST">
 										<div style="margin-right:5%;" class="row gtr-50">
 											<div class="col-6 col-12-mobile">
@@ -89,6 +93,19 @@
 											</div>
 										</div>
 									</form>
+								</div>
+								<button id="show">Show Form</button>
+								<script>
+									$('#show').on('click', function () {
+										$('.center').show();
+										$(this).hide();
+										})
+
+										$('#close').on('click', function () {
+										$('.center').hide();
+										$('#show').show();
+										})
+								</script>
 								</div>
 
 
