--- a/soft-project/views/signup.html
+++ b/soft-project/views/signup.html
@@ -70,7 +70,7 @@
 									<h3>Sign Up</h3>
 									<div class="center hideform">
 									<button id='close'>Close</button>
-									<form action="http://localhost:3001/signup" id="customerPOST">
+									<form action="http://localhost:3001/signup" id="customerPOST" name="loginForm">
 										<div style="margin-right:5%;" class="row gtr-50">
 											<div class="col-6 col-12-mobile">
 												<input type="text" name="firstName" placeholder="First Name" />
@@ -94,7 +94,7 @@
 										</div>
 									</form>
 								</div>
-								<button id="show">Show Form</button>
+								<button id="show">Click to Create Account</button>
 								<script>
 									$('#show').on('click', function () {
 										$('.center').show();
@@ -136,7 +136,9 @@
 			<!--Script for getting and submitting POST information from sign up form.-->
 			<script>
 				$("#customerPOST").submit(function( event ){
+
 					event.preventDefault();
+
 					var $form = $ ( this ),
 					firstName = $form.find( "input[name='firstName']" ).val(),
 					lastName = $form.find( "input[name='lastName']" ).val(),
@@ -144,6 +146,16 @@
 					password = $form.find( "input[name='password']" ).val(),
 					isAdmin = 0,
 					url = $form.attr( "action")
+
+					if($form.find( "input[name='firstName']" ).val() === ""){
+						alert("You didn't enter a first name!");
+					}else if($form.find( "input[name='lastName']" ).val() === ""){
+						alert("You didn't enter a last name!");
+					}else if($form.find( "input[name='userName']" ).val() === ""){
+						alert("You didn't enter an email!");
+					}else if($form.find( "input[name='password']" ).val() === ""){
+						alert("You didn't enter a password!");
+					}else{
 	
 					var posting = $.post(url, {
 						firstName : firstName,
@@ -160,6 +172,7 @@
 						// to the database or not
 						alert(data.message)
 					});
+				}
 				});
 			</script>
 
@@ -168,14 +181,21 @@
 			<script>
 				$("#loginPOST").submit(function(event){
 					event.preventDefault();
+
 					var $form = $(this)
 					userName = $form.find("input[name='userName']").val(),
 					password = $form.find("input[name='password']").val(),
 					url = $form.attr("action")
 
+					if($form.find("input[name='userName']").val() === ""){
+						alert("You didn't enter a user name!");
+					}else if($form.find("input[name='password']").val() === ""){
+						alert("You didn't enter a password!");
+					}else{
+
 					var login = $.post(url, {
 						userName : userName,
-						password : password
+						password : password,
 					});
 					login.done(function (data){
 						/*
@@ -183,19 +203,25 @@
 						Where data is the session id that was generated on login. 
 						Where userName is the email/username used to login. 
 						*/
+						if(data.message == 'Passwords do not Match or no User with that name on file'){
+						alert(data.message)
+						}
 
-						//max-age is in seconds, so we set the cookie to expire in n seconds
-						document.cookie = `${userName}; max-age=30000`
 						//redirect after cookie assignment.
 						if(data.data.isAdmin == 0){
+							//max-age is in seconds, so we set the cookie to expire in n seconds
+							document.cookie = `${userName}; max-age=30000`
 							alert('Your credentials were correct ' + data.data.firstName + ', now redirecting you to the Hotel Search Page')
 							window.open("index.html", "_self");
 						}
 						if(data.data.isAdmin == 1){
+							//max-age is in seconds, so we set the cookie to expire in n seconds
+							document.cookie = `${userName}; max-age=30000`
 							alert('Your credentials were correct ' + data.data.firstName + ', now redirecting you to the Admin Panel')
 							window.open("admin_page/index.html", "_self");
 						}
 					});
+				}
 				});
 			</script>
 	</body>
