--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -56,7 +56,37 @@
 .dropdown-content a:hover {background-color: #ddd}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;} 
+.show {display:block;}
+
+/* Start of navbar */
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #000000;
+  color: white;
+}
+/* End of navbar */
 		</style>
 	</head>
 	<body class="is-preload">
@@ -66,10 +96,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div>
+						<!--<div>
 							<a href="../signup.html">Sign Up / Sign In</a>
 							<a href="../index.html">Customer Reservations</a>
-						</div>
+						</div>-->
+						<div class="topnav">
+							<a class="active" href="#">Admin Page</a>
+							<a href="../signup.html">Sign Up / Sign In</a>
+							<a href="../index.html">Customer Reservations</a>
+						  </div> 
 						<div class="logo">
 							<span class="icon fa-gem"></span>
 						</div>
