slight-ui-fix-to-admin-page

--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -269,7 +269,7 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">The Team</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>This project was created by Group 6 for a Software Engineering Project. We utilized html templates to expedite the design process, and customized it according to our needs. The template was created under a creative commons license, so it is free to use. We made sure to keep any attribution acknowledging the author intact.
 									The technological stack that we decided to use is a slight variation of popular Web Stacks, excluding the use of a front-end framework. We decided to utilize html/css (mainly because of the design template), vanilla javascript, and JQuery for the DOM view and manipulation.
