remove-booking-only-updates-room-availability-still-need-to-fix-duplicate-rentals-when-adding-reservations

--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -144,9 +144,9 @@
 												<!--<label for="newLoc">Location Name</label>
 												<input type="text" name="locationName" placeholder="Enter Location Name">-->
 												<label for="newStartDT">Reservation Start Date</label>
-												<input type="text" name="adminStartDT" placeholder="Enter Start-Date for Client Reservation">
+												<input type="text" name="adminStartDT" placeholder="Format for Start Date: (YEAR-MONTH-DAY) is xxxx-xx-xx">
 												<label for="newEndDT">Reservation End Date</label>
-												<input type="text" name="adminEndDT" placeholder="Enter End-Date for Client Reservation">
+												<input type="text" name="adminEndDT" placeholder="Format for End Date: (YEAR-MONTH-DAY) is xxxx-xx-xx">
 												<label for="newRoomID">Room ID</label>
 												<input type="text" name="roomID" placeholder="Enter the Room ID for the Client">
 												<label for="newPropertyID">Property ID</label>
