--- a/soft-project/views/client_reservations.html
+++ b/soft-project/views/client_reservations.html
@@ -142,7 +142,7 @@
 
 																	var tableHeader = document.createElement('th');
 
-																	tableHeader.innerHTML = 'No active login session'
+																	tableHeader.innerHTML = 'No active login session or this person has no active reservations!'
 																	tableRow.appendChild(tableHeader);
 
 																	var divContainer = document.getElementById("showData");
