big-changes-no-more-duplicate-rentals

--- a/soft-project/views/index.html
+++ b/soft-project/views/index.html
@@ -562,7 +562,7 @@
 
 								console.log(JSON.stringify(data))
 
-								if (data.message == 'You are not signed in or you do not have the authority to use this feature!')
+								if (data.message == "There is no session for this user or the user does not exist")
 								{
 									alert("You are not signed in. You will now be redirected to the Sign-In page")
 									console.log("You are not signed in. You will now be redirected to the SignIN page")
