--- a/soft-project/views/client_reservations.html
+++ b/soft-project/views/client_reservations.html
@@ -122,7 +122,7 @@
 															e.preventDefault();
 															document.getElementById('showData').innerHTML = "";
 															$('#hideLabel').hide();
-															var getReservation = $.post("http://localhost:3001/clientBookings",
+															var getReservation = $.post("http://birdsuphotels.com:3001/clientBookings",
 															{
 																email : document.cookie
 															})
