--- a/soft-project/views/index.html
+++ b/soft-project/views/index.html
@@ -265,7 +265,7 @@
 			$("#button2").on("click", function(e) {
 				e.preventDefault();
 				var updateAvail = $.ajax({type: "PUT",
-				url: "http://localhost:3001/propertyUpdateAvailability",
+				url: "http://birdsuphotels.com:3001/propertyUpdateAvailability",
 				error: function(err) {
 					alert("updateAvailability error is, ", err)
 			},
@@ -321,7 +321,7 @@
 			else {
 
     		$.ajax({type: "POST",
-       		url: "http://localhost:3001/propertyCity",
+       		url: "http://birdsuphotels.com:3001/propertyCity",
         	data: { city : $("#cityQuery").val(),
 				hasBusinessRoom : $("#businessRoomQuery").val(),
 				hasGym : $("#gymQuery").val(),
@@ -552,7 +552,7 @@
 
 							let email = document.cookie
 
-							var findUserCredentials = $.post("http://localhost:3001/customers/:customerEmail", {
+							var findUserCredentials = $.post("http://birdsuphotels.com:3001/customers/:customerEmail", {
                             email : email,
 							mode : 'cors',
 							credentials : 'include'
@@ -576,7 +576,7 @@
 								console.log("userID is " + userId)
 								console.log(data)
 
-								var reserve = $.post("http://localhost:3001/createRental", {
+								var reserve = $.post("http://birdsuphotels.com:3001/createRental", {
 									email : email,
 									roomId : roomId,
 									userId : data.data.id,
@@ -590,7 +590,7 @@
 
 								reserve.done(function (data){
 
-									var updateAvail = $.post("http://localhost:3001/setBooking", {
+									var updateAvail = $.post("http://birdsuphotels.com:3001/setBooking", {
 									roomId : roomId
 									});
 
