--- a/soft-project/views/client_reservations.html
+++ b/soft-project/views/client_reservations.html
@@ -131,9 +131,11 @@
 																console.log(JSON.stringify(data));
 																var address = [];
 																var locationName = [];
+																var roomNumber = [];
 																for(var obj in data){
 																	address.push(data[obj].address);
 																	locationName.push(data[obj].locationName);
+																	roomNumber.push(data[obj].roomNumber);
 																}
 																if(data.length === 0){
 																	var table = document.createElement("table");
@@ -163,6 +165,10 @@
 																tableHeader.innerHTML = 'address'
 																tableRow.appendChild(tableHeader);
 
+																var tableHeader = document.createElement('th');
+																tableHeader.innerHTML = 'room number'
+																tableRow.appendChild(tableHeader);
+
 																for(i = 0; i < address.length; i++){
 																	var tableRow = table.insertRow(-1);
 																	for(j = 0; j < 1; j++){
@@ -170,6 +176,8 @@
 																		tabCell.innerHTML = locationName[i];
 																		var tabCell = tableRow.insertCell(-1);
 																		tabCell.innerHTML = address[i];
+																		var tabCell = tableRow.insertCell(-1);
+																		tabCell.innerHTML = roomNumber[i];
 																	}
 																}
 
