--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -204,6 +204,7 @@
 					//alert(document.cookie)
 					var bookedRooms = $.post('http://localhost:3001/isBooked', {
 						email : document.cookie,
+						adminRoute : 1
 					});
 						bookedRooms.done(function(customerInfo) {
 							document.getElementById('showData').innerHTML = "";
