changed-route-from-prod-to-local

--- a/soft-project/views/index.html
+++ b/soft-project/views/index.html
@@ -113,7 +113,7 @@
 							}
 						</script>
 
-						<form action="http://birdsuphotels.com:3001/propertyCity" method="GET">
+						<form action="http://localhost:3001/propertyCity" method="GET">
 													<!--TODO: Should this be moved to inside the form since it is input, later when date functionality is active?-->
 						<div class="two-col">
 							<div class="col1">
