--- a/soft-project/views/client_reservations.html
+++ b/soft-project/views/client_reservations.html
@@ -188,6 +188,7 @@
 																		deleteButton.value = roomNumber[i];
 																		deleteButtonText = document.createTextNode('Delete room # ' + deleteButton.value);
 																		deleteButton.appendChild(deleteButtonText)
+																		//console.log('reply_click value = ' + deleteButton.onclick);
 																		tableRow.appendChild(deleteButton)
 																		
 																}
@@ -203,6 +204,45 @@
 																*/ 
 															})
 														})
+													  </script>
+													  <script>
+														  function reply_click(roomInfo){
+															  // the onclick for the button we created method looks like this:
+															  /*
+															 	function onclick(event){
+																	 reply_click(this.value)
+																 }
+																 seems like a function calling a function
+															  */
+															  event.preventDefault();
+															  //alert('roomInfo is = ' + JSON.stringify(roomInfo))
+															  console.log(console.log('roomInfo = ') + roomInfo);
+															  userEmail = document.cookie;
+
+															  var deleteReservation = $.post('http://localhost:3001/deleteRental', {
+																  email : userEmail,
+																  roomId : roomInfo
+															  });
+
+															  
+
+															  deleteReservation.done(function (data) {
+																  //alert('roomId for updateAvail = ' + roomInfo)
+																  //alert('data inside delete reservation done is = ' + JSON.stringify(data))
+																  var updateAvail = $.post('http://localhost:3001/removeBooking', {
+																	  roomId : roomInfo
+																  });
+
+																  updateAvail.done(function(data){
+																	  console.log('data returned for update avail is ' + data);
+																	  //alert('data inside update avail return is = ' + JSON.stringify(roomId))
+																  });
+
+																 alert(`Your reservation for room # ${roomInfo} has been deleted ${document.cookie}!`)
+
+																 document.getElementById('showData').innerHTML = '';
+															  })
+														  }
 													  </script>
 												</footer>
 											</section>
